--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
         - cmake --version
         - cmake -DCMAKE_CXX_COMPILER=g++-4.8 -DCMAKE_C_COMPILER=gcc-4.8 .
         - make -j 2
-        - tests/galoistest
+        - ctest
     - os: linux
       compiler: clang
       addons:
@@ -35,14 +35,14 @@ matrix:
         - cmake --version
         - cmake .
         - make -j 2
-        - tests/galoistest
+        - ctest
     - os: osx
       compiler: clang
       script:
         - cmake --version
         - cmake .
         - make -j 2
-        - tests/galoistest
+        - ctest
     - os: windows
       env:
         - CMAKE_PATH="/c/Program Files/CMake/bin"
@@ -52,5 +52,4 @@ matrix:
         - cmake --version
         - cmake .. 
         - cmake --build . 
-        - cd tests
-        - galoistest.exe
+        - ctest
